picture to base64 and then to storage working. TO-DO auto generate name

--- a/web/views/home.handlebars
+++ b/web/views/home.handlebars
@@ -1,1 +1,10 @@
 <h1>SP1 - HOME</h1>
+{{#if error_message}}
+	<h2 style="color: red">{{error_message}}</h2>
+{{/if}}
+
+<p>Here list all fineshed and working</p>
+
+<a href="/newpic">New Pic</a>
+
+
