--- a/web/views/register.handlebars
+++ b/web/views/register.handlebars
@@ -7,7 +7,7 @@
 		<p>username: </p>
 		<input type="text" name="username" id="idUser">
 		<p>password: </p>
-		<input type="password" name="password" id="idUser">
+		<input type="password" name="password" id="idPassword">
 	</div>
 	</br>
 	<input type="submit" value="Register">	
